# Project-3aml

./: .gitignore  README.md  cut.py  evaluation.py  main.py  pyproject.toml  submission.py  task3_resampled.ipynb  training.py  training.py.585654339446262f9f2b4e75b5b6fa35.tmp
data_treatment/: __init__.py  data_augmentation.py  data_treatment.py  utils.py
evaluation/: __init__.py  evaluation.py
logs/train/: events.out.tfevents.1670864080.student-net-cx-3149.intern.ethz.ch.20132.0.v2  events.out.tfevents.1671021730.student-net-cx-3149.intern.ethz.ch.5126.0.v2  events.out.tfevents.1671028622.student-net-cx-3149.intern.ethz.ch.13862.0.v2  events.out.tfevents.1671028940.student-net-cx-3149.intern.ethz.ch.14709.0.v2  events.out.tfevents.1671033259.student-net-cx-3149.intern.ethz.ch.15271.0.v2  events.out.tfevents.1671033780.student-net-cx-3149.intern.ethz.ch.16157.0.v2  events.out.tfevents.1671033892.student-net-cx-3149.intern.ethz.ch.16601.0.v2  events.out.tfevents.1671035602.student-net-cx-3149.intern.ethz.ch.4130.0.v2  events.out.tfevents.1671036110.student-net-cx-3149.intern.ethz.ch.5058.0.v2  events.out.tfevents.1671036175.student-net-cx-3149.intern.ethz.ch.5130.0.v2  events.out.tfevents.1671037161.student-net-cx-3149.intern.ethz.ch.7798.0.v2  events.out.tfevents.1671038892.student-net-cx-3149.intern.ethz.ch.12422.0.v2  events.out.tfevents.1671108607.MacBook-Pro-de-Quentin.local.5896.0.v2  events.out.tfevents.1671121677.student-net-etx-1536.intern.ethz.ch.5746.0.v2  (+5 more)
models/: __init__.py  model.py
task3/: task3.ipynb
(+12 files in other folders)
