[tool.poetry]
name = "aml"
version = "0.1.0"
description = "mitral valve segmentation"
authors = ["qglht <quentin.guilhot@student-cs.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
tensorflow = "^2.11.0"
keras = "^2.11.0"
scikit-learn = "^1.2.0"
opencv-python = "^4.6.0.66"
ipdb = "^0.13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
